# fastapi-url-shortener

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  HOWTO.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  middleware.py  routes.py
app/core/: config.py  exceptions.py  logging.py
app/db/: redis_client.py
app/models/: schemas.py
app/services/: og_service.py  url_service.py
cli/: main.py
docs/adr/: 001-redis-over-mongodb.md  002-idempotent-url-shortening.md  003-og-preview-with-cache.md  004-rate-limiting-strategy.md
scripts/: rebuild-history.sh
tests/: conftest.py  test_api.py  test_cli.py  test_service.py
